--- a/index.html
+++ b/index.html
@@ -838,5 +838,11 @@
         });
     </script>
 </body>
+<head>
+  <!-- ... -->
+  <link rel="manifest" href="./manifest.json" crossorigin="use-credentials">
+  <meta name="theme-color" content="#4b6cb7">
+  <!-- ... -->
+</head>
 </html>
 
