--- a/index.html
+++ b/index.html
@@ -844,5 +844,10 @@
   <meta name="theme-color" content="#4b6cb7">
   <!-- ... -->
 </head>
+<head>
+  <link rel="apple-touch-icon" href="/DailyTracker/icons/icon-192x192.png">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+</head>    
 </html>
 
